--- a/DhaliProcurement/Views/Projects/Create.cshtml
+++ b/DhaliProcurement/Views/Projects/Create.cshtml
@@ -699,8 +699,9 @@
     <style>
         span.error {
             display: block;
-            /*visibility: hidden;*/
-            color: red;
+            /*visibility: hidden;*/  
+            font-style:italic;         
+            color: #c12a2a;
             font-size: 90%;
         }
     </style>
