--- a/DhaliProcurement/Views/VendorPayments/Edit.cshtml
+++ b/DhaliProcurement/Views/VendorPayments/Edit.cshtml
@@ -151,22 +151,25 @@
                         <br />
                         <div class="table-responsive scrolling">
                             <table class="Resource-list table table-bordered" id="PaymentDetails">
-                                <tr class="bg-grey">
-                                    @*<th>Sl. No.</th>*@
-                                    <th>Project Name</th>
-                                    <th>Site</th>
-                                    <th>Req. No.</th>
-                                    <th>PO No.</th>
-                                    <th>Item Name</th>
-                                    <th>Req. Qty Material</th>
-                                    <th>Unit</th>
-                                    <th>Challan No</th>
-                                    <th>Bill No.</th>
-                                    <th>Total Amount(tk)</th>
-                                    <th>Payment</th>
-                                    <th>Remarks</th>
-                                    <th>&nbsp;</th>
-                                </tr>
+                                <thead>
+                                    <tr class="bg-grey">
+                                        @*<th>Sl. No.</th>*@
+                                        <th>Project Name</th>
+                                        <th>Site</th>
+                                        <th>Req. No.</th>
+                                        <th>PO No.</th>
+                                        <th>Item Name</th>
+                                        <th>Req. Qty Material</th>
+                                        <th>Unit</th>
+                                        <th>Challan No</th>
+                                        <th>Bill No.</th>
+                                        <th>Total Amount(tk)</th>
+                                        <th>Payment</th>
+                                        <th>Remarks</th>
+                                        <th>&nbsp;</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
                             </table>
                         </div>
                     </div>
@@ -197,6 +200,7 @@
                     @Html.AntiForgeryToken()
                     <div class="form-horizontal">
                         <div class="form-group">
+                            <input type="hidden" id="ModalTaskId" />
                             <input type="hidden" id="ProjectId" value="" />
                         </div>
                         <div class="form-group">
@@ -206,7 +210,7 @@
                             <div class="col-md-10">
                                 @Html.DropDownList("ProjectId", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ModalProjectId" })
                                 <span class="error" id="ModalProjectId_Error"></span>
-                              </div>
+                            </div>
                         </div>
                         <div class="form-group">
                             @Html.Label("Site Name", htmlAttributes: new
@@ -215,7 +219,7 @@
                             <div class="col-md-10">
                                 @Html.DropDownList("SiteId", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ModalSiteId" })
                                 <span class="error" id="ModalSiteId_Error"></span>
-                             </div>
+                            </div>
                         </div>
                         <div class="form-group">
                             @Html.Label("Req No", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -240,7 +244,7 @@
                             <div class="col-md-10">
                                 @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ModalItemName" })
                                 <span class="error" id="ModalItemId_Error"></span>
-                             </div>
+                            </div>
                         </div>
                         <div class="form-group">
                             @Html.Label("Req Qty", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -316,6 +320,7 @@
     var deleteCounter = 0;
     var deleteList = [];
     var selRow;
+    var taskCounter = 0;
 
     $(document).ready(function () {
 
@@ -366,9 +371,9 @@
                 //alert('test');
 
                 for (var i = 0; i < data.List.length; i++) {
-
+                    taskCounter++;
                     var newRow = jQuery('<tr>'
-                          + '<td><input value="' + data.List[i].ProjectId + '" type="hidden" name="ProjectId" class="form-control" style="width:50px;"/><label name="label_ProjectName" style="width:150px;">' + data.List[i].ProjectName + '</label><input class="form-control" value="' + data.List[i].ProjectName + '" readonly="true" type="hidden" name="ProjectName"  style="width:90px;"/></td>'
+                          + '<td><input type="hidden" name="TaskId" value="' + taskCounter + '"/><input value="' + data.List[i].ProjectId + '" type="hidden" name="ProjectId" class="form-control" style="width:50px;"/><label name="label_ProjectName" style="width:150px;">' + data.List[i].ProjectName + '</label><input class="form-control" value="' + data.List[i].ProjectName + '" readonly="true" type="hidden" name="ProjectName"  style="width:90px;"/></td>'
                           + '<td><input value="' + data.List[i].SiteId + '" type="hidden" name="SiteId" class="form-control" style="width:50px;"/><label name="label_SiteName" style="width:150px;">' + data.List[i].SiteName + '</label><input class="form-control" value="' + data.List[i].SiteName + '" readonly="true" type="hidden" name="SiteName"  style="width:90px;"/></td>'
                           + '<td><input value="' + data.List[i].ReqNo + '" type="hidden" name="ReqNo" class="form-control" style="width:90px;"/><label name="label_ReqNoName" style="width:150px;">' + data.List[i].ReqNoName + '</label><input value="' + data.List[i].ReqNoName + '" type="hidden" name="ReqNoName" class="form-control" style="width:90px;" disabled="disabled"/><input value="' + data.List[i].Proc_VendorPaymentDetId + '" type="hidden" name="Proc_VendorPaymentDetId"/></td>'
                           + '<td><input value="' + data.List[i].PONo + '" type="hidden" name="PONo" class="form-control" style="width:90px;"/><label name="label_PONoName" style="width:150px;">' + data.List[i].PONoName + '</label><input class="form-control" value="' + data.List[i].PONoName + '" readonly="true" type="hidden" name="PONoName"  style="width:90px;"/><input value="' + data.List[i].Proc_MaterialEntryDetId + '" type="hidden" name="Proc_MaterialEntryDetId"/></td>'
@@ -385,7 +390,7 @@
                           + '<button type="button" id="editSite" class="btn text-primary-400 btn-flat btn-icon btn-rounded  btn-xs editSite " data-toggle="modal" data-target="#detailForm"><i class="icon-pencil"></i></button>'
                           +'<button class="btn text-warning-600 btn-flat btn-icon btn-rounded deleteDetailTask"><i class="icon-cross"></i></button>'
                           +'</td></tr>');
-                    jQuery('table.Resource-list').append(newRow);
+                    jQuery('table.Resource-list tbody').append(newRow);
 
                 }
 
@@ -395,6 +400,7 @@
                     var row = $(this).closest('tr');
                     selRow = $(this).closest('tr');
 
+                    var TaskId = row.find('input[name=TaskId]').val();
                     var ProjectName = row.find('input[name=ProjectName]').val();
                     var ProjectId = row.find('input[name=ProjectId]').val();
                     var SiteName = row.find('input[name=SiteName]').val();
@@ -414,6 +420,8 @@
                     var Payment = row.find('input[name=Payment]').val();
                     var Remarks = row.find('input[name=Remarks]').val();
 
+
+                    $('#ModalTaskId').val(TaskId);
                     $('#ModalProjectId').val(ProjectId);
                     $('#ModalSiteId').val(SiteId);
                     $('#ModalReqNo').val(ReqNo);
@@ -426,8 +434,6 @@
                     $('#ModalTotalAmount').val(TotalAmount);
                     $('#ModalPayment').val(Payment);
                     $('#ModalRemarks').val(Remarks);
-
-                   
 
                 });
 
@@ -683,6 +689,7 @@
     $('#ModalDetailSave').click(function () {
         var isAllValid = true;
 
+        var TaskId = $('#ModalTaskId').val();
         var ModalProjectId = $('#ModalProjectId option:selected').val();
         var ModalProjectName = $('#ModalProjectId option:selected').text();
         var ModalSiteId = $('#ModalSiteId option:selected').val();
@@ -770,7 +777,7 @@
                 else {
                     $('#ModalPayment_Error').hide();
                 }
-            }           
+            }
         }
         if (ModalRemarks.length > 50) {
             $('#ModalRemarks_Error').text("Remarks cannot be greater than 50 characters!").show();
@@ -779,6 +786,20 @@
         else {
             $('#ModalRemarks_Error').hide();
         }
+
+        $('table.Resource-list tbody tr').each(function () {
+            var Itemname = $(this).find("td input[name=ItemId]").val();
+            var Bill = $(this).find("td input[name=BillNo]").val();
+            var task = $(this).find("td input[name=TaskId]").val();
+
+            //alert(task + "-->" + TaskId);
+            if (task != TaskId.trim()) {
+                if (ModalItemId.trim() == Itemname.trim() && ModalBillNo.trim().toUpperCase()==Bill.trim().toUpperCase()) {
+                    alert('This payment already exists!');
+                    isAllValid = false;
+                }
+            }
+        });
 
         if (isAllValid) {
             selRow.find('input[name=ProjectName]').val(ModalProjectName);
@@ -795,7 +816,7 @@
             selRow.find('input[name=UnitId]').val(ModalUnitId);
             selRow.find('input[name=UnitName]').val(ModalUnitName);
             selRow.find('input[name=ChallanNo]').val(ModalChallanNo);
-            selRow.find('input[name=ChallanNoName]').val(ModalChallanNoName);       
+            selRow.find('input[name=ChallanNoName]').val(ModalChallanNoName);
             selRow.find('input[name=BillNo]').val(ModalBillNo);
             selRow.find('input[name=TotalAmount]').val(ModalTotalAmount);
             selRow.find('input[name=Payment]').val(ModalPayment);
@@ -1093,7 +1114,7 @@
         var Remarks = $('#Remarks').val();
         var Proc_MaterialEntryDetId= $('#Proc_MaterialEntryDetId').val();
         //   alert('Proc_MaterialEntryDetId '+Proc_MaterialEntryDetId);
-        
+
         if ($('#ProjectId').val().trim() == '' || ProjectName == "--Select--") {
             $('#ProjectId_Error').show();
             isAllValid = false;
@@ -1154,7 +1175,7 @@
                 else {
                     $('#Payment_Error').hide();
                 }
-            }           
+            }
         }
         if (Remarks.length> 50) {
             $('#Remarks_Error').text("Remarks cannot be greater than 50 characters!").show();
@@ -1164,18 +1185,30 @@
             $('#Remarks_Error').hide();
         }
 
-        $('table.Resource-list tr').each(function () {
-            var Item = $(this).find("td input[name=BillNo]").val();
-            //var VName = $(this).find("td input[name=VendorName]").val();
-            if (BillNo == Item) {
-                alert('This bill no. already exists!');
+        //$('table.Resource-list tr').each(function () {
+        //    var Item = $(this).find("td input[name=BillNo]").val();
+        //    //var VName = $(this).find("td input[name=VendorName]").val();
+        //    if (BillNo.trim().toUpperCase()== Item.trim().toUpperCase() ) {
+        //        alert('This bill no. already exists!');
+        //        isAllValid = false;
+        //    }
+        //});
+
+
+        $('table.Resource-list tbody tr').each(function () {
+
+            var Item = $(this).find("td input[name=ItemId]").val();
+            var bill = $(this).find("td input[name=BillNo]").val();
+            if (BillNo.trim().toUpperCase() == bill.trim().toUpperCase() && ItemId.trim()== Item.trim()) {
+                alert('This payment already exists!');
                 isAllValid = false;
             }
         });
 
         if (isAllValid) {
+            taskCounter++;
             var newRow = jQuery('<tr>'
-                + '<td><input value="' + ProjectId + '" type="hidden" name="ProjectId" class="form-control" style="width:50px;"/><label name="label_ProjectName" style="width:150px;">' + ProjectName + '</label><input value="' + VendorPayPrimaryKey + '" type="hidden" name="Proc_VendorPaymentDetId"/></td>'
+                + '<td><input type="hidden" name="TaskId" value="' + taskCounter + '"/><input value="' + ProjectId + '" type="hidden" name="ProjectId" class="form-control" style="width:50px;"/><label name="label_ProjectName" style="width:150px;">' + ProjectName + '</label><input value="' + VendorPayPrimaryKey + '" type="hidden" name="Proc_VendorPaymentDetId"/></td>'
                 + '<td><input value="' + SiteId + '" type="hidden" name="SiteId" class="form-control" style="width:50px;"/><label name="label_SiteName" style="width:150px;">' + SiteName + '</label><input value="' + Proc_MaterialEntryDetId + '" type="hidden" name="Proc_MaterialEntryDetId"/></td>'
                 + '<td><input value="' + ReqNo + '" type="hidden" name="ReqNo" class="form-control" style="width:50px;"/><label name="label_ReqNoName" style="width:150px;">' + ReqNoName + '</label></td>'
                 + '<td><input value="' + PONo + '" type="hidden" name="PONo" class="form-control" style="width:50px;"/><label name="label_PONoName" style="width:150px;">' + PONoName + '</label></td>'
@@ -1193,7 +1226,19 @@
 
             jQuery('table.Resource-list').append(newRow);
 
-
+            $("#ProjectId").val("");
+            $("#SiteId").val("");
+            $("#ReqNo").val("");
+            $("#PONo").val("");
+            $("#ItemName").val("");
+            $("#ChallanNo").val("");
+            $('#UnitName').val("");
+            $('#ReqQty').val("");
+            $('#UnitId').val("");
+            $('#BillNo').val("");
+            $('#TotalAmount').val("");
+            $('#Payment').val("");
+            $('#Remarks').val("");
 
 
             $('.editSite').click(function () {
@@ -1237,12 +1282,7 @@
             });
         }
 
-        $('#ReqQty').val("");
-        $('#UnitId').val("");
-        $('#BillNo').val("");
-        $('#TotalAmount').val("");
-        $('#Payment').val("");
-        $('#Remarks').val("");
+
 
     });
 
@@ -1429,7 +1469,8 @@
 <style>
     span.error {
         display: block;
-        color: red;
+        font-style: italic;
+        color: #c12a2a;
         font-size: 90%;
     }
 </style>
