--- a/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
+++ b/DhaliProcurement/Views/PurchaseOrders/Edit.cshtml
@@ -768,7 +768,7 @@
     $('#ModalDetailSave').click(function () {
         var isAllValid = true;
 
-        
+
         var TaskId = $('#ModalTaskId').val();
         var ItemName = $('#ModalItemName option:selected').text();
         var ItemId = $('#ModalItemName option:selected').val();
@@ -1344,8 +1344,8 @@
     }*/
     span.error {
         display: block;
-        /*visibility: hidden;*/
-        color: red;
+        font-style: italic;
+        color: #c12a2a;
         font-size: 90%;
     }
 </style>
