--- a/DhaliProcurement/Views/TenderQuotation/Edit.cshtml
+++ b/DhaliProcurement/Views/TenderQuotation/Edit.cshtml
@@ -11,7 +11,8 @@
         <!-- Basic layout-->
         <div class="panel panel-flat">
             <div class="panel-heading">
-                <h5 class="panel-title"><i class="icon-stack-plus position-left"></i>Materials Tender Quotation
+                <h5 class="panel-title">
+                    <i class="icon-stack-plus position-left"></i>Materials Tender Quotation
                     @if (Model.proc_TenderMas.isApproved == "A")
                     {
                         <span class="badge badge-success">Approved</span>
@@ -157,7 +158,7 @@
                                     <td></td>
                                     <td><span class="error" id="VendorName_Error" style="padding-left:10px;">Vendor required</span></td>
                                     <td></td>
-                                    <td><span class="error" id="QtnNo_Error"  style="padding-left:10px;">Qtn No. required</span></td>
+                                    <td><span class="error" id="QtnNo_Error" style="padding-left:10px;">Qtn No. required</span></td>
                                     <td></td>
                                     <td></td>
                                 </tr>
@@ -179,7 +180,7 @@
                                 </tr>
                                 <tr>
                                     <td></td>
-                                    <td><span class="error" id="UnitPrice_Error"  style="padding-left:10px;">Unit Price required</span></td>
+                                    <td><span class="error" id="UnitPrice_Error" style="padding-left:10px;">Unit Price required</span></td>
                                     <td></td>
                                     <td></td>
                                     <td></td>
@@ -211,7 +212,7 @@
                                     <tbody></tbody>
                                 </table>
                             </div>
-                        </div>      
+                        </div>
                     </div>
 
                 }
@@ -275,8 +276,8 @@
                             </div>
                             <div class="form-group">
                                 @Html.Label("Project Name", htmlAttributes: new
-                       {
-                           @class = "control-label col-md-2"@*, @style="font-weight:bold;"*@ })
+                           {
+                               @class = "control-label col-md-2"@*, @style="font-weight:bold;"*@ })
                                 <div class="col-md-10">
                                     @Html.DropDownList("ProjectId", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ModalProjectId" })
                                     <span class="error" id="ModalProjectName_Error"></span>
@@ -298,13 +299,13 @@
                                     <input type="hidden" id="ModalProc_RequisitionDetId" />
                                     @Html.DropDownList("RCode", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ModalRequisition" })
                                     <span class="error" id="ModalReqNo_Error"></span>
-                                 </div>
+                                </div>
                             </div>
                             <div class="form-group">
                                 @Html.Label("Item Name", htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                 <div class="col-md-10">
-                                    <input type="hidden" id="ModalProc_RequisitionDetId"/>
+                                    <input type="hidden" id="ModalProc_RequisitionDetId" />
                                     @Html.DropDownList("ItemName", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ModalItemName" })
                                     <span class="error" id="ModalItemName_Error"></span>
                                 </div>
@@ -331,7 +332,7 @@
                                 <div class="col-md-10">
                                     @Html.DropDownList("VendorId", null, "--Select--", htmlAttributes: new { @class = "form-control select2", @data_required = "required", @id = "ModalVendor" })
                                     <span class="error" id="ModalVendorName_Error"></span>
-                                 </div>
+                                </div>
                             </div>
                             <div class="form-group">
                                 @Html.Label("Qtn No", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -360,7 +361,7 @@
                                 @Html.Label("Total", htmlAttributes: new { @class = "control-label col-md-2" })
                                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                                 <div class="col-md-10">
-                                    @Html.TextBox("ModalTotal", null, new { @class = "form-control" ,@disabled="disabled"})
+                                    @Html.TextBox("ModalTotal", null, new { @class = "form-control", @disabled = "disabled" })
                                 </div>
                             </div>
                             <div class="modal-footer">
@@ -455,7 +456,7 @@
                                        + '<td><input value="' + data.List[i].SiteId + '" type="hidden" name="SiteId"/><label style="font-weight:bold;width:150px;">' + data.List[i].SitetName + '<label></td>'
                                        + '<td><input value="' + data.List[i].RCode + '" type="hidden" name="ReqCode" style="font-weight:bold;"/><label style="font-weight:bold;width:150px;">' + data.List[i].RCodeName + '<label><input value="' + data.List[i].RCodeName + '" type="hidden" name="RCodeName" style="font-weight:bold;"/><input value="' + data.List[i].Proc_RequisitionDetId + '" type="hidden" name="Proc_RequisitionDetId"/></td>'
                                        + '<td><input value="' + data.List[i].ItemId + '" type="hidden" name="ItemId"/><label style="font-weight:bold;width:150px;">' + data.List[i].ItemName + '<label><input value="' + data.List[i].ItemName + '" type="hidden" name="ItemName"/></td>'
-                                       + '<td><label style="font-weight:bold;">' + data.List[i].Qty + '<label></td>'                                  
+                                       + '<td><label style="font-weight:bold;">' + data.List[i].Qty + '<label></td>'
                                        + '<td><input value="' + data.List[i].UnitId + '" type="hidden" name="UnitId"/><label style="font-weight:bold;">' + data.List[i].UnitName + '<label></td>'
                                        + '<td><input value="' + data.List[i].VendorId + '" type="hidden" name="Vendor"/><label style="font-weight:bold;width:150px;">' + data.List[i].VendorName + '<label><input value="' + data.List[i].VendorName + '" type="hidden" name="VendorName"/></td>'
                                        +'<td> <input class="form-control" style="width:110px;" type="hidden" name="TQNo" value="' + data.List[i].TQNo + '" style="font-weight:bold;" /><label style="font-weight:bold;">' + data.List[i].TQNo+ '<label></td>'
@@ -475,7 +476,7 @@
                                                 +'</td>'
 
                                      +'</tr>');
-                                   
+
                                     $('#RequisitionDetails tbody').append(row);
                                     RebindDatePicker()
                                 }
@@ -565,7 +566,7 @@
                                                 +'<button type="button" class="btn  text-warning-600 btn-flat btn-icon btn-rounded deleteDetailTask"><i class="icon-cross"></i></button>'+
                                                 //+'<button  onclick="RemoveTask('+data.List[i].TenderDetailId+')" type="button" class="btn  text-warning-600 btn-flat btn-icon btn-rounded"><i class="icon-cross"></i></button>'+
                                                 ' </td>'
-                                                
+
                                        +'</tr>');
 
                                     $('#RequisitionDetails tbody').append(row);
@@ -580,13 +581,13 @@
 
 
                         }
-                     
+
                     }
 
                     $('.editSite').click(function () {
 
                         var row = $(this).closest('tr');
-                        selRow = $(this).closest('tr');                            
+                        selRow = $(this).closest('tr');
 
                         var TaskId = row.find('input[name=TaskId]').val();
                         var ProjectId = row.find('input[name=ProjectId]').val();
@@ -613,7 +614,7 @@
                         $('#ModalProc_RequisitionDetId').val(Proc_RequisitionDetId);
                         $('#ModalQty').val(Qty);
                         $('#ModalUnit').val(UnitId);
-                        $('#ModalUnitName').val(UnitName);                       
+                        $('#ModalUnitName').val(UnitName);
                         $('#ModalVendor').val(Vendor);
                         $('#ModalQtnNo').val(TQNo);
                         $('#ModalQtnDate').val(TQDate);
@@ -628,49 +629,49 @@
                         $('#ModalUnitName').attr("disabled", "true");
                         $('#ModalTotal').attr("disabled", "true");
                     });
-       
+
 
 
                     $('.deleteDetailTask').click(function (e) {
                         e.preventDefault();
                         //var retVal = confirm("Do you want to delete this Item ?");
                         //if (retVal == true) {
-                            var row = $(this).closest('tr');
-                            var itemDetId = $(this).closest('tr').find('td input[name=TenderDetailId]').val();
+                        var row = $(this).closest('tr');
+                        var itemDetId = $(this).closest('tr').find('td input[name=TenderDetailId]').val();
 
-                            RequisitionDelete = JSON.stringify({
-                                TenderDetailId: itemDetId
-                            });
+                        RequisitionDelete = JSON.stringify({
+                            TenderDetailId: itemDetId
+                        });
 
-                            $.ajax({
-                                contentType: 'application/json; charset=utf-8',
-                                dataType: 'json',
-                                type: 'POST',
-                                url: '/TenderQuotation/DeleteTenderDetailItem',
-                                data: RequisitionDelete,
-                                success: function (result) {
-                                    console.log(result);
-                                    if (result.flag === true) {
-                                        deleteList[deleteCounter] = itemDetId;
-                                        deleteCounter++;
-                                        row.remove();
-                                    }
-                                    else {
-                                        alert(result.message);
-                                    }
-
-
-                                },
-                                failure: function (response) {
-                                    alert('error');
+                        $.ajax({
+                            contentType: 'application/json; charset=utf-8',
+                            dataType: 'json',
+                            type: 'POST',
+                            url: '/TenderQuotation/DeleteTenderDetailItem',
+                            data: RequisitionDelete,
+                            success: function (result) {
+                                console.log(result);
+                                if (result.flag === true) {
+                                    deleteList[deleteCounter] = itemDetId;
+                                    deleteCounter++;
+                                    row.remove();
                                 }
-                            });
+                                else {
+                                    alert(result.message);
+                                }
+
+
+                            },
+                            failure: function (response) {
+                                alert('error');
+                            }
+                        });
 
                         //}
                         //else {
                         //    return false;
                         //}
-                        
+
                     });
 
                 },
@@ -683,7 +684,7 @@
 
         });
 
-        
+
         $('#ModalDetailSave').click(function () {
             var isAllValid = true;
 
@@ -1066,7 +1067,7 @@
         $("#ItemName").change(function () {
             var ItemId = $('#ItemName option:selected').val();
             var Rcode = $('#RCode  option:selected').text();
-      
+
             $.ajax({
                 type: "post",
                 url: "/TenderQuotation/GetUnit",
@@ -1101,7 +1102,7 @@
             }
         }, 'input[name=unitPrice]');
 
-        
+
         $(document).on({
             'change': function () {
                 var price = $(this).val();
@@ -1245,7 +1246,7 @@
                         $('#UnitPrice_Error').hide();
                     }
                 }
-            
+
             }
             if (TQNo.trim().length > 50) {
                 $('#QtnNo_Error').text("Qtn No. can not be greater than 50 characters!").show();
@@ -1273,9 +1274,9 @@
                     alert('Same Vendor against this item exists!');
                     isAllValid = false;
                 }
-               
+
             });
-            
+
 
             if (isAllValid) {
                 var newRow = jQuery('<tr>'
@@ -1321,7 +1322,7 @@
                 $('.editSite').click(function () {
 
                     var row = $(this).closest('tr');
-                    selRow = $(this).closest('tr');                            
+                    selRow = $(this).closest('tr');
 
                     var TaskId = row.find('input[name=TaskId]').val();
                     var ProjectId = row.find('input[name=ProjectId]').val();
@@ -1347,7 +1348,7 @@
                     $('#ModalItemName').val(itemId);
                     $('#ModalQty').val(Qty);
                     $('#ModalUnit').val(UnitId);
-                    $('#ModalUnitName').val(UnitName);                       
+                    $('#ModalUnitName').val(UnitName);
                     $('#ModalVendor').val(Vendor);
                     $('#ModalQtnNo').val(TQNo);
                     $('#ModalQtnDate').val(TQDate);
@@ -1549,7 +1550,7 @@
                         TQNo: TQNo[i].value,
                         TQDate: TQDate[i].value,
                         TQPrice: TQPrice[i].value,
-                        Status: Status[i].value                      
+                        Status: Status[i].value
                     });
                     console.log('---------->');
                     console.log('RCode: ' + TenderItems[i].RCode);
@@ -1613,15 +1614,15 @@
     <style>
         span.error {
             display: block;
-            color: red;
+            font-style: italic;
+            color: #c12a2a;
             font-size: 90%;
         }
 
-       .scrolling {
+        .scrolling {
             width: 100%;
             height: 350px;
             overflow-x: scroll;
             overflow-y: scroll;
         }
     </style>
-   
